--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 2. Jmat_loopvals/
 *.html
 *.c
+*.so
 3. Ctabs/*ctabks/
 *checkpoint.ipynb
+1. source/test_work_profiling.py
+1. source/Profile.prof
+1. source/matdiogotobabis
+1. source/matdiogotobabisnewfun_henry
+1.source/setup_B222jfunc.py
