commented code and added mathematica notebook

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@
 1. source/Profile.prof
 1. source/matdiogotobabis
 1. source/matdiogotobabisnewfun_henry
-1.source/setup_B222jfunc.py
+1. source/setup_B222jfunc.py
+1. source/build/
+1. source/__pycache__/
